--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "pancake-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage_": "./",
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build_clean": "node ./scripts/build-non-split.js",
     "test": "react-scripts test --testPathIgnorePatterns=/src/__tests__/config/",
     "test:config": "react-scripts test --testPathPattern=/src/__tests__/config/",
     "integration-test": "start-server-and-test 'serve -s build -p 3000' http://localhost:3000 'cypress run'",
@@ -79,10 +80,12 @@
     "recharts": "2.0.6",
     "redux-localstorage-simple": "^2.4.1",
     "remark-gfm": "^1.0.0",
+    "rewire": "^5.0.0",
     "split-grid": "^1.0.11",
     "styled-components": "^5.3.0",
     "swiper": "^6.8.4",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
