--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "rewire": "^5.0.0",
     "split-grid": "^1.0.11",
     "styled-components": "^5.3.0",
+    "stylis-important-plugin": "0.0.5",
     "swiper": "^6.8.4",
     "typescript": "^4.3.2",
     "webpack": "^4.44.2"
